add icloud/google calendar

--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ DOT_CALENDAR_TOKEN=your_token_here
 QWEATHER_KEY=your_qweather_api_key
 
 # 和风天气API主机
-QWEATHER_HOST=your_qweather_host.re.qweatherapi.com
+QWEATHER_HOST=your_qweather_host
 
 # 查询位置的经纬度（格式：经度,纬度）
 # 北京：116.41,39.90
@@ -19,11 +19,26 @@ QWEATHER_HOST=your_qweather_host.re.qweatherapi.com
 # 深圳：114.07,22.62
 CONFIG_USER_LOCATION=longitude,latitude
 
+# ==================== 日历数据源配置 ====================
+# 日历来源，可选值: dingtalk, icloud, google
+CALENDAR_SOURCE=dingtalk
+
 # ==================== 钉钉日程配置 ====================
 # 钉钉CalDAV账户（可选，不配置则跳过日程功能）
 DINGTALK_CALDAV_USER=your_dingtalk_caldav_username
-
 DINGTALK_CALDAV_PASS=your_dingtalk_caldav_password
+
+# ==================== iCloud日历配置 ====================
+# iCloud CalDAV URL (通常为 https://caldav.icloud.com/)
+ICLOUD_CALDAV_URL=https://caldav.icloud.com/
+ICLOUD_CALDAV_USER=your_icloud_username
+ICLOUD_CALDAV_PASS=your_icloud_app_specific_password
+
+# ==================== Google日历配置 ====================
+# Google CalDAV URL (通常为 https://apidata.googleusercontent.com/caldav/v2/)
+GOOGLE_CALDAV_URL=your_google_caldav_url
+GOOGLE_CALDAV_USER=your_google_username
+GOOGLE_CALDAV_PASS=your_google_app_password
 
 # ==================== Quote/0设备配置 ====================
 # Quote/0设备码（多个设备用逗号分隔）
