修复与Dot设备服务通信时出现的gzip解码错误

--- a/.env.sample
+++ b/.env.sample
@@ -1,69 +1,58 @@
-# Dot Calendar 配置文件 sample
+# Dot Calendar 配置文件
 # 请根据实际情况修改以下配置
-# 复制此文件为 .env 并填入此配置
 
-# ==================== 1. 系统基础配置 ====================
-# 访问令牌（用于API安全验证，请自行修改）
+# ==================== 基础配置 ====================
+# 访问令牌（用于安全验证，请自行修改）
 DOT_CALENDAR_TOKEN=your_token_here
 
-# 时区设置
-TZ=Asia/Shanghai
+# ==================== 天气API配置 ====================
+# 和风天气API密钥
+QWEATHER_KEY=your_qweather_api_key
 
-# PHP环境兼容配置 (Python版本仅保留作为参考)
-PHP_MEMORY_LIMIT=256M
-PHP_MAX_EXECUTION_TIME=60
+# 和风天气API主机
+QWEATHER_HOST=your_qweather_host
 
-# ==================== 2. 设备连接配置 ====================
+# 查询位置的经纬度（格式：经度,纬度）
+# 北京：116.41,39.90
+# 上海：121.47,31.23
+# 广州：113.26,23.12
+# 深圳：114.07,22.62
+CONFIG_USER_LOCATION=longitude,latitude
+
+# ==================== 日历数据源配置 ====================
+# 日历来源，可选值: dingtalk, icloud, google
+CALENDAR_SOURCE=dingtalk
+
+# ==================== 钉钉日程配置 ====================
+# 钉钉CalDAV账户（可选，不配置则跳过日程功能）
+DINGTALK_CALDAV_USER=your_dingtalk_caldav_username
+DINGTALK_CALDAV_PASS=your_dingtalk_caldav_password
+
+# ==================== iCloud日历配置 ====================
+# iCloud CalDAV URL (通常为 https://caldav.icloud.com/)
+ICLOUD_CALDAV_URL=https://caldav.icloud.com/
+ICLOUD_CALDAV_USER=your_icloud_username
+ICLOUD_CALDAV_PASS=your_icloud_app_specific_password
+
+# ==================== Google日历配置 ====================
+# Google CalDAV URL (通常为 https://apidata.googleusercontent.com/caldav/v2/)
+GOOGLE_CALDAV_URL=your_google_caldav_url
+GOOGLE_CALDAV_USER=your_google_username
+GOOGLE_CALDAV_PASS=your_google_app_password
+
+# ==================== Quote/0设备配置 ====================
 # Quote/0设备码（多个设备用逗号分隔）
 DOT_DEVICE_ID=your_device_id_1,your_device_id_2
 
 # Quote/0应用密钥
 DOT_APP_KEY=your_dot_app_key
 
-# ==================== 3. 功能开关配置 ====================
-# 启用日历推送 (true/false)
-CALENDAR_ENABLE_DEVICE_PUSH=true
+# ==================== 其他配置 ====================
+# 时区设置
+TZ=Asia/Shanghai
 
-# 启用天气走势图推送 (true/false)
-WEATHER_ENABLE_DEVICE_PUSH=true
+# PHP内存限制
+PHP_MEMORY_LIMIT=256M
 
-# ==================== 4. 位置与天气服务 ====================
-# 查询位置的经纬度（格式：经度,纬度）
-# 北京：116.41,39.90
-# 上海：121.47,31.23
-# 广州：113.26,23.12
-# 深圳：114.07,22.62
-CONFIG_USER_LOCATION=116.41,39.90
-
-# 和风天气API密钥
-QWEATHER_KEY=your_qweather_api_key
-
-# 和风天气API主机 (通常为 devapi.qweather.com 用于免费版，api.qweather.com 用于付费版)
-QWEATHER_HOST=devapi.qweather.com
-
-# 天气走势图 - 调整图片尺寸以适配设备 (默认为false，因为代码已原生支持296x152)
-WEATHER_RESIZE_FOR_DEVICE=false
-
-# 天气走势图 - 默认预报天数
-WEATHER_FORECAST_DAYS=15
-
-# ==================== 5. 日历数据源配置 ====================
-# 日历来源，可选值: dingtalk, icloud, google
-CALENDAR_SOURCE=dingtalk
-
-# --- 钉钉日程配置 ---
-# 钉钉CalDAV账户（可选，不配置则跳过日程功能）
-DINGTALK_CALDAV_USER=your_dingtalk_caldav_username
-DINGTALK_CALDAV_PASS=your_dingtalk_caldav_password
-
-# --- iCloud日历配置 ---
-# iCloud CalDAV URL (通常为 https://caldav.icloud.com/)
-ICLOUD_CALDAV_URL=https://caldav.icloud.com/
-ICLOUD_CALDAV_USER=your_icloud_username
-ICLOUD_CALDAV_PASS=your_icloud_app_specific_password
-
-# --- Google日历配置 ---
-# Google CalDAV URL (通常为 https://apidata.googleusercontent.com/caldav/v2/)
-GOOGLE_CALDAV_URL=your_google_caldav_url
-GOOGLE_CALDAV_USER=your_google_username
-GOOGLE_CALDAV_PASS=your_google_app_password
+# PHP执行时间限制（秒）
+PHP_MAX_EXECUTION_TIME=60
